--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <script>try{Typekit.load();}catch(e){}</script>
     
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="http://brianjon.es/about.html">
+    <link rel="canonical" href="http://localhost:4000/about.html">
 </head>
 
 
