--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,9 @@
 
     <script src="//use.typekit.net/yrt0yrw.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
-    
+
+    <link href="https://micro.blog/jonesbp" rel="me" />
+
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://brianjon.es/projects.html">
 </head>
