--- a/about.html
+++ b/about.html
@@ -100,6 +100,8 @@
 </script>
 
 
+    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
   </body>
 
 </html>
