--- a/nows/2015-12-23/index.html
+++ b/nows/2015-12-23/index.html
@@ -135,6 +135,8 @@
 </script>
 
 
+    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
   </body>
 
 </html>
