--- a/projects.html
+++ b/projects.html
@@ -112,6 +112,8 @@
 </script>
 
 
+    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
   </body>
 
 </html>
