Deploy new Mastodon host details

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
         <ul class="social-media-list">
       <li>
-        <a href="https://social.coop/@jonesbp">Mastodon</a>
+        <a href="https://masto.brianjon.es/@brian">Mastodon</a>
       </li>
       <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
@@ -73,7 +73,7 @@
     </ul>
         <ul class="social-media-list">
       <li>
-        <a href="https://social.coop/@jonesbp">Mastodon</a>
+        <a href="https://masto.brianjon.es/@brian">Mastodon</a>
       </li>
       <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
