Update Mastodon links

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 
         <ul class="social-media-list">
       <li>
-        <a href="https://masto.brianjon.es/@brian">Mastodon</a>
+        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
       </li>
       <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
@@ -85,7 +85,7 @@
     </ul>
         <ul class="social-media-list">
       <li>
-        <a href="https://masto.brianjon.es/@brian">Mastodon</a>
+        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
       </li>
       <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
