Updated Projects page

--- a/projects.html
+++ b/projects.html
@@ -58,14 +58,15 @@
       <h2 id="active">Active</h2>
 
 <ul>
-  <li><a href="https://texasmusicdocs.github.io/"><strong>Texas Music Documentation Project</strong></a>: Working on public history projects covering music and performance in Texas.</li>
-  <li><a href="http://backlist.cc"><strong>Backlist</strong></a>: Co-founded in 2015 with colleagues from <em>The Appendix</em>. <a href="http://jekyllrb.com">Jekyll</a>-generated site extended with custom plugins. Designed with an eye towards demonstrating low-tech, low-cost publishing options beyond ‘blogs’ for humanities projects online.</li>
-  <li><strong><em>Archipelagic Empire</em> Project</strong>: Book project based on my 2014 dissertation for the history department at UT-Austin.</li>
+  <li><a href="https://publicdomainreview.org">The Public Domain Review</a>: An online journal and not-for-profit project dedicated to the exploration of curious and compelling works from the history of art, literature, and ideas.</li>
+  <li><a href="https://local-memory.org/"><strong>Local Memory</strong></a>: An ongoing public history project presenting a cultural geography of music performance in Austin, Texas.</li>
 </ul>
 
 <h2 id="past">Past</h2>
 
 <ul>
+  <li><a href="http://backlist.cc"><strong>Backlist</strong></a>: Co-founded in 2015 with colleagues from <em>The Appendix</em>. <a href="http://jekyllrb.com">Jekyll</a>-generated site extended with custom plugins. Designed with an eye towards demonstrating low-tech, low-cost publishing options beyond ‘blogs’ for humanities projects online.</li>
+  <li><strong><em>Archipelagic Empire</em> Project</strong>: Book project based on my 2014 dissertation for the history department at UT-Austin.</li>
   <li><a href="https://theappendix.net"><strong><em>The Appendix</em></strong></a>: Co-founded in 2012 with colleagues from the UT-Austin history department. Developed Ruby on Rails publishing and subscription platform as well as e-book publishing toolchain for monthly deliveries to subscribers.</li>
   <li><strong>Bright Set Music</strong>: Founded and operated small talent management agency representing bands including The Black Angels, Brothers and Sisters, and the Strange Boys.</li>
   <li><strong>Indierect Music Incubator</strong>: Co-founded and operated full-service promotional agency for musicians in Austin.</li>
