--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,6 @@
 
         <ul class="social-media-list">
       <li>
-        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
-      </li>
-      <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
       </li>
       <li>
@@ -58,7 +55,7 @@
       <h2 id="active">Active</h2>
 
 <ul>
-  <li><a href="https://publicdomainreview.org">The Public Domain Review</a>: An online journal and not-for-profit project dedicated to the exploration of curious and compelling works from the history of art, literature, and ideas.</li>
+  <li><a href="https://publicdomainreview.org"><strong>The Public Domain Review</strong></a>: An online journal and not-for-profit project dedicated to the exploration of curious and compelling works from the history of art, literature, and ideas.</li>
   <li><a href="https://local-memory.org/"><strong>Local Memory</strong></a>: An ongoing public history project presenting a cultural geography of music performance in Austin, Texas.</li>
 </ul>
 
@@ -85,9 +82,6 @@
       <li><a href="/about.html">About</a></li>
     </ul>
         <ul class="social-media-list">
-      <li>
-        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
-      </li>
       <li>
         <a href="https://twitter.com/jonesbp">Twitter</a>
       </li>
