--- a/projects.html
+++ b/projects.html
@@ -27,17 +27,17 @@
   <div class="wrapper">
     <a class="site-title" href="/">Brian Jones</a>
 
-        <ul class="social-media-list">
-      <li>
-        <a href="https://twitter.com/jonesbp">Twitter</a>
-      </li>
-      <li>
+    <ul class="social-media-list">
+    <li>
+        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
+    </li>
+    <li>
         <a href="https://github.com/jonesbp">Github</a>
-      </li>
-      <li>
+    </li>
+    <li>
         <a href="http://micro.brianjon.es">Microblog</a>
-      </li>
-    </ul>
+    </li>
+</ul>
 
   </div>
 
@@ -81,17 +81,17 @@
       <li><a href="/projects.html">Projects</a></li>
       <li><a href="/about.html">About</a></li>
     </ul>
-        <ul class="social-media-list">
-      <li>
-        <a href="https://twitter.com/jonesbp">Twitter</a>
-      </li>
-      <li>
+    <ul class="social-media-list">
+    <li>
+        <a href="https://sunbeam.city/@jonesbp">Mastodon</a>
+    </li>
+    <li>
         <a href="https://github.com/jonesbp">Github</a>
-      </li>
-      <li>
+    </li>
+    <li>
         <a href="http://micro.brianjon.es">Microblog</a>
-      </li>
-    </ul>
+    </li>
+</ul>
 
   </div>
 </footer>
