Build with Tinylytics

--- a/nows/2015-12-23/index.html
+++ b/nows/2015-12-23/index.html
@@ -129,8 +129,7 @@
 </script>
 
 
-    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
-    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+    <script src="https://tinylytics.app/embed/fF5zRHueuJ4FCxKmakia.js" defer></script>
   </body>
 
 </html>
